# BikeCodersLife-FitParser

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  SETUP.md  THIRD_PARTY_LICENSES.md
.github/workflows/: build.yml  deploy-docs.yml  deploy-docs.yml.disabled  release.yml  static-analysis.yml
docs/: BENCHMARKS.md  CODEBASE_OVERVIEW.md  SECURITY.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: intro.md
docs-site/docs/getting-started/: usage.md
docs-site/docs/performance/: optimization.md
docs-site/docs/reference/: cli-options.md  json-output.md
docs-site/docs/security/: security-layers.md
src/: fit_parser.cpp  fit_parser.h  fit_writer.cpp  fit_writer.h  gps_stripper.cpp  gps_stripper.h  gpx_parser.cpp  gpx_parser.h  json_output.cpp  json_output.h  main.cpp  main_stripper.cpp  tcx_parser.cpp  tcx_parser.h  track_point.h
tests/: README.md  generate_expected.sh  run_tests.sh
tests/expected/: 2022-08-27-094047-ELEMNT BFF6-124-0.json  2022-08-30-155312-ELEMNT BFF6-125-0.json  2022-09-02-154654-ELEMNT BFF6-126-0.json  2022-09-03-105856-ELEMNT BFF6-128-0.json  2022-09-06-155832-ELEMNT BFF6-129-0.json  2022-09-11-083647-ELEMNT BFF6-131-0.json  2022-09-14-122832-ELEMNT BFF6-132-0.json  2022-09-19-Zwift_Flat_Route_in_Watopia.json  2022-09-21-104104-ELEMNT BFF6-133-0.json  2022-09-25-083415-ELEMNT BFF6-134-0.json  2022-10-01-Zwift-5x110%ftp.json  2022-10-02-114306-ELEMNT BFF6-136-0.json  2022-10-07-Zwift_Ocean_Lava_Cliffside_Loop_in_Watopia.json  2022-10-09-084355-ELEMNT BFF6-137-0.json  2022-10-12-121153-ELEMNT BFF6-138-0.json  2022-10-14-THRESHOLD_MICROBURSTS_in_Paris.json  2022-10-16-093902-ELEMNT BFF6-139-0.json  2022-10-17_Xwift_D2.json  2022-10-19-125124-ELEMNT BFF6-140-0.json  2022-10-22-Z1-zwift.json  2022-10-23-084512-ELEMNT BFF6-141-0.json  2022-10-25-Z1-test.json  2022-10-26-084113-ELEMNT BFF6-142-0.json  2022-10-26-104447-ELEMNT BFF6-143-0.json  2022-10-28-174525-ELEMNT BFF6-144-0.json  2022-10-30-095522-ELEMNT BFF6-145-0.json  2022-11-02-105229-ELEMNT BFF6-146-0.json  2022-11-04-Knickerbocker_in_New_York.json  2022-11-05-093312-ELEMNT BFF6-147-0.json
tests/fixtures/: Avondrit-Wieringerwerf.gpx  Hoorn Enkhuizen Wervershoof.gpx  README.md  evening-into-night.gpx  gps-signal-drops.gpx  hr-only-no-power.gpx  negative-elevation-below-sea-level.gpx  no-sensors-gps-only.gpx  sample.gpx  speed-sensor-with-gps.gpx  with-power-and-hr.gpx
